fix position in practice and learning section and be able to display on safari browser

--- a/main.css
+++ b/main.css
@@ -144,11 +144,12 @@ h2{
   background-color: var(--yellow);
   color: var(--black);
 }
+
 .show-score{
   text-align: center;
-  font-size: 800%;
+  font-size: 600%;
   position: relative;
-  transform: translate(0%,25%);
+  top: 30%;
   color: #1368CE;
 }
 
@@ -191,7 +192,6 @@ h2{
   height: 500px;
   margin: auto;
   position: relative;
-  border: 5px solid #FFFF00;
 
   
 }
@@ -199,10 +199,8 @@ h2{
   font-size: 20px;
   font-weight: 600;
   position: absolute;
-
   transform: translate(0, -30%);
   padding: 10px;
-  border: 5px solid #FFFF00;
 
 }
 .number{
@@ -212,7 +210,6 @@ h2{
   position: absolute;
   right: 4%;
   transform: translate(0%, -20%); 
-  border: 5px solid #FFFF00;
 
 }
 .learning .vocab{
@@ -221,7 +218,6 @@ h2{
   text-align: center;
   position: relative;
   top: 30%;
-  border: 5px solid #FFFF00;
 
 }
 .learning .mean{
@@ -230,7 +226,6 @@ h2{
   text-align: center;
   position: relative;
   top: 30%;
-  border: 5px solid #FFFF00;
 
 }
 
@@ -246,7 +241,6 @@ h2{
   position: absolute;
   top: 80%;
   left: 40%;
-  border: 5px solid #FFFF00;
 
 
 }
@@ -262,7 +256,6 @@ h2{
   position: absolute;
   top: 80%;
   left: 57%;
-  border: 5px solid #FFFF00;
 
 }
 /*-------------------------------ending of learning part----------------------------------*/
@@ -280,8 +273,7 @@ h2{
   font-weight: 800;
   text-align: center;
   position: relative;
-  top: 5%;
-  border: 5px solid #FFFF00;
+  top: 30%;
 
 }
 .ans{
@@ -289,12 +281,11 @@ h2{
   height: 40px;
   font-size: 18px;
   text-align: center;
-  position: relative;
-  top: 10%;
+  position: absolute;
+  bottom: 40%;
   left: 12.5%;
-  border: 5px solid #FFFF00;
-
 }
+
 .btn-enter{
   text-transform: uppercase;
   font-size: 15px;
@@ -302,61 +293,45 @@ h2{
   box-shadow: 3px 3px 3px -1px var(--cyan);
   background-color: var(--blue);
   color: var(--white);
-  border: none;
   cursor: pointer;
   margin: auto;
+  border: none;
   padding: 10px;
   width: 30%;
   height: 10%;
   border-radius: 10%;
-  position: relative;
-  top: 30%;
+  position: absolute;
+  bottom: 15%;
   left: 34.75%;
-  border: 5px solid #FFFF00;
 
 }
-.correct{
-  position: relative;
-  top: 0%;
-  text-align: right;
-  transform: translate(0%, 0%);
-  font-size: 18px;
-  font-weight: 500;
-  border: 5px solid #FFFF00;
 
-}
 .correct-img{
-  width: 7%; 
-  height: 7%; 
-  max-width: 28px; 
-  max-height: 28px;
-  position: relative;
-  text-align: right;
-  transform: translate(-20%, 30%);
+  width: 30px;
+  height: 30px;
+  position: absolute;
+  top: 10%;
+  right: 13%;
 }
 
-.incorrect{
-  position: relative;
-  top: 1%;
-  text-align: right;
-  transform: translate(0%, 0%);
-  font-size: 18px;
-  font-weight: 500;
-  border: 5px solid #FFFF00;
-
- 
+.score-correct{
+  position: absolute;
+  top: 11%;
+  right: 5%;
 }
+
 .incorrect-img{
-  width: 7.2%; 
-  height: 7.2%; 
   max-width: 30px; 
   max-height: 30px;
-  position: relative;
-  text-align: right;
-  transform: translate(-17%, 30%);
+  position: absolute;
+  top: 18%;
+  right: 13%;
 }
-
-
+.score-incorrect{
+  position: absolute;
+  top: 18%;
+  right: 5%;
+}
 
 /*-------------------------------ending of practice part----------------------------------*/
 
